--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "nbt-ts",
-  "version": "1.0.0",
-  "description": "NBT decoder and encoder",
+  "version": "1.0.1",
+  "description": "Easy to use NBT encoder and decoder",
   "main": "lib",
   "types": "lib",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/janispritzkau/nbt-ts.git"
+    "url": "git+https://github.com/janispritzkau/nbt-ts.git"
   },
   "scripts": {
     "prepare": "tsc"
   },
   "keywords": [
     "nbt",
-    "decode",
-    "encode",
     "minecraft",
     "typescript"
   ],
