--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nbt-ts",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Easy to use NBT encoder and decoder",
   "main": "lib",
   "types": "lib",
@@ -9,6 +9,7 @@
     "url": "git+https://github.com/janispritzkau/nbt-ts.git"
   },
   "scripts": {
+    "test": "node test",
     "prepare": "tsc"
   },
   "keywords": [
@@ -19,7 +20,7 @@
   "author": "Janis Pritzkau <janispritzkau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.14.14",
+    "@types/node": "^10.14.15",
     "typescript": "^3.5.3"
   }
 }
