--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nbt-ts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Easy to use NBT encoder and decoder",
   "main": "lib",
   "types": "lib",
@@ -10,12 +10,13 @@
   },
   "scripts": {
     "test": "node test",
-    "prepare": "tsc"
+    "prepare": "tsc && npm run test"
   },
   "keywords": [
     "nbt",
     "minecraft",
-    "typescript"
+    "typescript",
+    "snbt"
   ],
   "author": "Janis Pritzkau <janispritzkau@gmail.com>",
   "license": "MIT",
