--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nbt-ts",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "An easy to use encoder and decoder for the NBT format",
-  "main": "lib",
-  "types": "lib",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/janispritzkau/nbt-ts.git"
@@ -21,7 +21,7 @@
   "author": "Janis Pritzkau <janispritzkau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^12.7.3",
-    "typescript": "^3.6.2"
+    "@types/node": "^10.14.19",
+    "typescript": "^3.6.3"
   }
 }
