--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -1,6 +1,4 @@
 {
-    "compilerOptions": {
-        "target": "esnext",
-        "module": "commonjs"
-    }
+  "extends": "../tsconfig.json",
+  "include": ["."]
 }
