--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nbt-ts",
-  "version": "1.3.3",
+  "version": "2.0.0",
   "description": "An easy to use encoder and decoder for the NBT format",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,8 +9,9 @@
     "url": "git+https://github.com/janispritzkau/nbt-ts.git"
   },
   "scripts": {
-    "test": "node test",
-    "prepare": "tsc && npm run test"
+    "build": "tsc",
+    "prepare": "npm run build && npm run test",
+    "test": "node tests/index.js"
   },
   "keywords": [
     "nbt",
@@ -21,7 +22,7 @@
   "author": "Janis Pritzkau <janispritzkau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.14.19",
-    "typescript": "^3.6.3"
+    "@types/node": "^14.14.35",
+    "typescript": "^4.2.3"
   }
 }
