--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nbt-ts",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "An easy to use encoder and decoder for the NBT format",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "prepare": "rm -r lib && npm run build && npm run test",
+    "prepack": "rm -r lib && npm run build && npm run test",
     "test": "ts-node tests/index.ts"
   },
   "keywords": [
@@ -22,8 +22,8 @@
   "author": "Janis Pritzkau <janispritzkau@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^14.14.35",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "@types/node": "^16.4.8",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   }
 }
