--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "nbt-ts",
   "version": "1.3.4",
   "description": "An easy to use encoder and decoder for the NBT format",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
+  "types": "lib/esm/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/janispritzkau/nbt-ts.git"
   },
   "scripts": {
     "test": "node test",
-    "prepare": "tsc && npm run test"
+    "build": "tsc && tsc --module esnext --outDir lib/esm",
+    "prepare": "npm run build && npm run test"
   },
   "keywords": [
     "nbt",
@@ -22,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.4.8",
-    "typescript": "^4.3.5"
-  }
+    "typescript": "^4.7.4"
+  },
+  "sideEffects": false
 }
